--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -22,7 +22,9 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="31dp"
             android:text="반경 설정"
-            android:textSize="30sp"
+            android:textSize="50sp"
+            android:textStyle="bold
+"
             android:layout_gravity="center"
             android:layout_marginTop="27dp"
             android:textColor="@color/black" />
@@ -33,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="설정 입력"
+            android:textSize="40sp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:textColor="@color/black" />
@@ -41,7 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="  확인  "
-            android:textSize="20sp"
+            android:textSize="30sp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/roundbutton"
             android:layout_gravity="center"
             android:clickable="true"
