--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="170dp"
         android:text="Smart Marker"
+        android:textStyle="bold"
         android:textColor="#000000"
         android:textSize="50sp" />
 
