--- a/app/src/main/res/layout/fragment_homegps.xml
+++ b/app/src/main/res/layout/fragment_homegps.xml
@@ -16,7 +16,9 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
-           android:textSize="20sp"
+           android:textColor="@color/black"
+           android:textStyle="bold"
+           android:textSize="40sp"
            android:text="진짜 등록하시겠습니까?"/>
         <TextView
             android:id="@+id/btn_gpssave"
@@ -24,7 +26,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/roundbutton"
             android:layout_gravity="center"
-            android:textSize="20sp"
+            android:textSize="35sp"
+            android:layout_marginTop="20dp"
             android:text="  등록  "/>
 
     </LinearLayout>
